# skycalc_ipy_attempted_astropy_template

./: .gitignore  .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/skycalc_ipy/: index.rst
licenses/: LICENSE.rst
skycalc_ipy/: __init__.py
skycalc_ipy/example_subpkg/: setup_package.py
