[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = skycalc_ipy
description = Access atmospheric spectral data from ESO's skycalc tool
long_description = Provides a wrapper for the skycalc_cli command line tool. The wrapper sends the necessary parameters to the ESO SkyCalc server, saves the recieved FITS file, and returns the transmission and emission spectra in a Pythonic way. This is useful for those who want to interact with SkyCalc inside a Python environment
author = Kieran Leschinski
author_email = kieran.leschinski@univie.ac.at
license = BSD 3-Clause
url = https://github.com/astronomyk/skycalc_ipy
edit_on_github = False
github_project = skycalc_ipy
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.1.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[entry_points]

astropy-package-template-example = packagename.example_mod:main

